--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -1,19 +1,10 @@
 {
-   "version": 2,
-   "name": "api-neobox",
-   "builds": [
-     { "src": "index.js", "use": "@vercel/node" }
-   ],
-   "routes": [
-     {
-       "src": "/api/(.*)",
-       "headers": {
-         "Access-Control-Allow-Origin": "*",
-         "Access-Control-Allow-Methods": "GET, POST, PUT, DELETE, OPTIONS",
-         "Access-Control-Allow-Headers": "Authorization, Content-Type"
-       },
-       "dest": "/index.js"
-     }
-   ]
+    "version": 2,
+    "name": "api-neobox",
+    "builds": [
+       { "src": "index.js", "use": "@vercel/node" }
+    ],
+    "routes": [
+       { "src": "/(.*)", "dest": "/index.js" }
+    ]
  }
- 
